public class StringVariables
{
    public const string Run = "Run";
    public const string Move = "Move";
    public const string Look = "Look";
    public const string MouseScrollWheel = "Mouse ScrollWheel";
    public const string X_Velocity = "X_Velocity";
    public const string Y_Velocity = "Y_Velocity";

    public const string Salute = "Salute";
    public const string SwingDancing = "SwingDancing";
    public const string HipHopDancing = "HipHopDancing";
    public const string TutHipHopDancing = "TutHipHopDancing";
    public const string ThrillerDancing = "ThrillerDancing";

    public const string BaseState = "Base State";


}
